--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "spotifydl-x": "^0.3.5",
     "telegraph-uploader": "^2.0.0",
     "wikipedia": "^1.1.6",
+    "node-periodic-table": "^0.0.6",
+    "ptable": "^0.0.3",
     "typed-emitter": "^2.1.0",
     "wa-sticker-formatter": "^4.3.2",
     "youtubedl-core": "^4.11.5"
