--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "slot-machine": "^2.1.0",
     "spotifydl-x": "^0.3.5",
     "telegraph-uploader": "^2.0.0",
+    "@tobyg74/tiktok-api-dl": "^1.0.13",
     "wikipedia": "^1.1.6",
     "node-periodic-table": "^0.0.6",
     "ptable": "^0.0.3",
