--- a/package.json
+++ b/package.json
@@ -29,42 +29,47 @@
     "@shineiichijo/canvas-chan": "^1.0.1",
     "@shineiichijo/marika": "^2.0.6",
     "@shineiichijo/nhentai-ts": "^1.0.0",
+    "@tobyg74/tiktok-api-dl": "^1.1.4",
     "@typegoose/typegoose": "^10.0.0",
     "@whiskeysockets/baileys": "^6.7.2",
-    "axios": "^1.4.0",
     "anime-quiz": "^3.0.0",
+    "axios": "^1.7.2",
     "axios-cache-interceptor": "^1.0.1",
     "canvacord": "^5.4.9",
     "chalk": "4.1.1",
     "cheerio": "^1.0.0-rc.12",
     "chess-image-generator-ts": "^1.0.0",
     "chess-node": "^1.1.0",
+    "chess.js": "^1.0.0-beta.8",
     "dotenv": "^16.0.3",
-    "node-cron": "^3.0.0",
     "emoji-regex": "^10.2.1",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "fs-extra": "^11.1.0",
-    "imgur": "^2.2.0",
+    "imgur": "^2.4.2",
     "link-preview-js": "^3.0.4",
     "linkifyjs": "^4.0.2",
+    "ll": "^1.2.0",
+    "math.js": "^1.1.46",
     "moment-timezone": "^0.5.40",
     "mongoose": "^6.7.0",
+    "node-cron": "^3.0.0",
+    "node-periodic-table": "^0.0.6",
+    "node.js": "^0.0.1-security",
     "path": "^0.12.7",
     "pino": "^8.7.0",
     "pokenode-ts": "^1.14.0",
     "prettier": "^2.8.1",
+    "ptable": "^0.0.3",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "slot-machine": "^2.1.0",
     "spotifydl-x": "^0.3.5",
     "telegraph-uploader": "^2.0.0",
-    "wikipedia": "^1.1.6",
-    "node-periodic-table": "^0.0.6",
-    "ptable": "^0.0.3",
     "typed-emitter": "^2.1.0",
     "wa-sticker-formatter": "^4.3.2",
+    "wikipedia": "^1.2.0",
     "youtubedl-core": "^4.11.5"
   },
   "devDependencies": {
